adding AWS credentials

--- a/CI.yaml
+++ b/CI.yaml
@@ -4,7 +4,8 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-# variables:
+variables:
+- group: FullStack
 #   AWS_ACCESS_KEY_ID: <tu-access-key-id>
 #   AWS_SECRET_ACCESS_KEY: <tu-secret-access-key>
 #   AWS_DEFAULT_REGION: <tu-region-de-aws>
@@ -27,6 +28,16 @@ steps:
     npm run build
   displayName: 'Build and Test'
 
+- bash: |
+    mkdir ~/.aws
+    cat >> ~/.aws/credentials << EOL
+    [default]
+    aws_access_key_id=$(AWS_ACCESS)
+    aws_secret_access_key=$(AWS_SECRET)
+    EOL
+  displayName: 'Set AWS credentials'
+
+
 - task: AWSCLI@1
   inputs:
     awsCredentials: 'AWS'
@@ -34,3 +45,6 @@ steps:
     command: 's3 cp'
     arguments: './build.zip s3://pragma-tf-pipeline-artifacts/build.zip'
   displayName: 'Upload Artifact to S3'
+  env:
+    AWS_ACCESS_KEY_ID: $(AWS_ACCESS)
+    AWS_SECRET_ACCESS_KEY: $(AWS_SECRET)
