--- a/CI.yaml
+++ b/CI.yaml
@@ -60,7 +60,8 @@ steps:
     awsCommand: 's3'
     awsSubCommand: 'cp'
     #arguments: '$(Build.ArtifactStagingDirectory)/build.zip s3://$(bucket)/build.zip'
-    parameters: './build.zip s3://$(bucket)/build.zip'
+    #parameters: './build.zip s3://$(bucket)/build.zip'
+    arguments: '$(System.DefaultWorkingDirectory)/build.zip s3://$(bucket)/build.zip'
   displayName: 'Upload Artifact to S3'
   # env:
   #   AWS_ACCESS_KEY_ID: $(AWS_ACCESS)
