--- a/CI.yaml
+++ b/CI.yaml
@@ -59,9 +59,10 @@ steps:
     regionName: 'us-west-2'
     awsCommand: 's3'
     awsSubCommand: 'cp'
-    #arguments: '$(Build.ArtifactStagingDirectory)/build.zip s3://$(bucket)/build.zip'
+    arguments: '$(Build.ArtifactStagingDirectory)/build.zip s3://$(bucket)/build.zip'
     #parameters: './build.zip s3://$(bucket)/build.zip'
-    arguments: '$(System.DefaultWorkingDirectory)/build.zip s3://$(bucket)/build.zip'
+    #arguments: '$(System.DefaultWorkingDirectory)/build.zip s3://$(bucket)/build.zip'
+    paths: '$(Build.ArtifactStagingDirectory)/build'
   displayName: 'Upload Artifact to S3'
   # env:
   #   AWS_ACCESS_KEY_ID: $(AWS_ACCESS)
